Fixed a few things and added files from my GUIUpdate1 Branch.

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
 * Java Build
 */
 apply plugin: 'java'
+apply plugin: 'eclipse'
 apply plugin: 'application'
 apply plugin: 'com.google.osdetector'
 
